Navbar update: indicate current page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             <img class="header-img" src="img/pexels-chait-goli-1796730.jpg">
         </div>
         <div class="header-navbar">
-                <a class="navbar-item" href="./index"><b>Home</b></a>
+                <a class="navbar-item-current" href=""><b>Home</b></a>
                 <a class="navbar-item" href="./project"><b>Projects</b></a>
                 <a class="navbar-item" href="./contact"><b>Contacts</b></a>
                 <a class="navbar-item" href="./more"><b>More</b></a>
