--- a/more.html
+++ b/more.html
@@ -10,9 +10,8 @@
             <a class="navbar-item" href="./index"><b>Home</b></a>
             <a class="navbar-item" href="./project"><b>Projects</b></a>
             <a class="navbar-item" href="./contact"><b>Contacts</b></a>
-            <a class="navbar-item" href="./more"><b>More</b></a>
+            <a class="navbar-item-current" href="./more"><b>More</b></a>
         </div>
-        
-    </body>
 
+    </body>
 </html>
