--- a/project.html
+++ b/project.html
@@ -9,7 +9,7 @@
     <body>
         <div class="header-navbar">
             <a class="navbar-item" href="./index"><b>Home</b></a>
-            <a class="navbar-item" href="./project"><b>Projects</b></a>
+            <a class="navbar-item-current" href="./project"><b>Projects</b></a>
             <a class="navbar-item" href="./contact"><b>Contacts</b></a>
             <a class="navbar-item" href="./more"><b>More</b></a>
         </div>
