Make navbar responsive

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
         <div class="header-navbar">
             <a class="navbar-item" href="./index"><b>Home</b></a>
             <a class="navbar-item" href="./project"><b>Projects</b></a>
-            <a class="navbar-item-current" href=""><b>Contacts</b></a>
+            <a class="navbar-item-current" href="./contact"><b>Contacts</b></a>
             <a class="navbar-item" href="./more"><b>More</b></a>
         </div>
 
