--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
     <title>Jingxuan(Bruno) Gao</title>
     <link rel="stylesheet" href="./css/myStyle.css">
     <body>
-        <div>
-            <img class="header-img" src="img/pexels-chait-goli-1796730.jpg">
-        </div>
         <div class="header-navbar">
-                <a class="navbar-item-current" href=""><b>Home</b></a>
+                <a class="navbar-item-current" href="./index"><b>Home</b></a>
                 <a class="navbar-item" href="./project"><b>Projects</b></a>
                 <a class="navbar-item" href="./contact"><b>Contacts</b></a>
                 <a class="navbar-item" href="./more"><b>More</b></a>
@@ -18,6 +15,10 @@
             <h2>WELCOME to Jingxuan(Bruno) Gao's Website!</h2>
             <p>A master student from Northeastern University Seattle</p>
         </div>
+        <div>
+            <img class="header-img" src="./img/pexels-chait-goli-1796730.jpg">
+        </div>
+
     </body>
 
 </html>
