--- a/more.html
+++ b/more.html
@@ -13,5 +13,8 @@
             <a class="navbar-item-current" href="./more"><b>More</b></a>
         </div>
 
+        <div>
+            
+        </div>
     </body>
 </html>
