update for more page.

--- a/more.html
+++ b/more.html
@@ -4,6 +4,7 @@
         <title>More and more</title>
     </head>
     <link rel="stylesheet" href="./css/myStyle.css">
+
     <body>
 
         <div class="header-navbar">
@@ -13,8 +14,11 @@
             <a class="navbar-item-current" href="./more"><b>More</b></a>
         </div>
 
-        <div>
-            
+        <div class="center-div">
+            <h2>More about Me</h2>
+            <p>I'm <span>Jingxuan Gao</span>, you can call me Bruno (Even me, not sure the reason why choose it as my English name). 
+                I have been a web backend developer for one year, by using Golang, but know little about frontend. So I'm exicted to learn more and get more experience on web development. 
+                The reason why I'm interested in web development is that, it could have more direct influence on user and make a huge. I love cooking for friends, not for myself, Lol.</p>
         </div>
     </body>
 </html>
